# rofi-todoist

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs  rofi.rs  todoist.rs
