[package]
name = "rofi-todoist"
version = "0.1.0"
authors = [
  "Jake Howard <git@theorangeone.net>",
  "Charles Crete <charles@cretezy.com>",
]
repository = "https://github.com/RealOrangeOne/rofi-todoist"
edition = "2021"

[dependencies]
notify-rust = "4.11.3"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
